# mpvpaper-stop

./: meson.build  multi-monitor-config.template.json
include/: constants.h  context.h  logging.h  multi_monitor.h  sockets.h  utils.h
include/op_modes/: op_mode_default.h  op_mode_full_multi_monitor.h  op_mode_simple_multi_monitor.h
src/: context.c  logging.c  main.c  multi_monitor.c  sockets.c  utils.c
src/op_modes/: op_mode_default.c  op_mode_full_multi_monitor.c  op_mode_simple_multi_monitor.c
